--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -65,3 +65,7 @@ font-family: 'Open Sans Condensed', sans-serif;
   text-align:right;
   font-size:10px;
 }
+
+.logo:hover {
+  text-decoration:none;
+}
