--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,8 +47,7 @@ Splurting out unsolicited advice about entrepreneurship since 2014
         <%= link_to 'About', about_path %>
       </div>
       <div class="col-xs-6 footer-blurb">
-        Proudly hacked in Boston, MA by <a href="http://thefirehoseproject.com">S &amp; S</a><br />
-        Want to build your own Splurty Web App - <a href="http://thefirehoseproject.com">Learn how to code here</a>
+        Proudly built by Sai        
       </div>
     </div>
   </div>
